--- a/frontend/react-app/src/components/searchbar/searchbar.css
+++ b/frontend/react-app/src/components/searchbar/searchbar.css
@@ -1,29 +1,37 @@
 #searchBarObject{
-    grid-template-columns: 1fr 3fr;
+    display: grid;
+    grid-template-columns: min-content min-content;
     grid-template-areas: 'sbbutton sbbar';
-
+    border-radius: 35em;
 }
 
 .glass {
-    max-width: 1.5em;
-    max-height: 1.5em;
-    align-items: center;
-    align-self: center;
-}
+    max-width: 1.6em;
+    max-height: 1.6em;
+    padding: 12%;
+    opacity: 0.4;
+    }
 
-.seachbar{
-    background-color: transparent;
-    border: 0px solid;
-    height: 20px;
+.searchbar{
+    background-color: white;
+    padding: 0;
+    padding-left:0.2em;
+    outline: 0;
+    border: 0;
+    border-top-right-radius: 1em;
+    border-bottom-right-radius: 1em;
+    border-left: 1px grey solid;
+    height: 2em;
     width: 160px;
     color: #CCC;
 }
 
 .searchbar-button{
     grid-area: sbbutton; 
-    border : 0px;
-    background-color: transparent;
+    background-color: white;
+    border-bottom-left-radius: 1em;
+    border-top-left-radius: 1em;
+    border : 0;
     padding: 0;
-    width: 1.5em; 
-    height: 1.5em; 
-}
+    width: 2em; 
+    height: 2em;}
