--- a/frontend/react-app/src/pages/edition/global/global.css
+++ b/frontend/react-app/src/pages/edition/global/global.css
@@ -55,7 +55,7 @@
     position: relative;
     z-index: 1;
     text-align: center;
-    font-size: 3tem;
+    font-size: 4em;
     color: aliceblue;
     
 }
