--- a/frontend/react-app/src/pages/edition/global/global.css
+++ b/frontend/react-app/src/pages/edition/global/global.css
@@ -1,5 +1,5 @@
 #globalEdition {
-    background-color: #432818;
+    background-color: #F5EBDF;
     min-height: 100vh;
 	white-space: pre-line;
     display: grid;
@@ -36,6 +36,7 @@
     height: 38vh;
     object-fit: cover;
     border-radius: 5px;
+    filter: drop-shadow(0 0.5rem 0.75rem #3b1e00);
 }
 
 .EditButton{
@@ -64,7 +65,7 @@
 
 .EditButton img:hover{
     transform: scale(1.01);
-    filter: blur(1px);
+    filter: blur(1px) drop-shadow(0 0.75rem 0.75rem #3b1e00);
 }
 
 
