--- a/frontend/react-app/src/components/searchbar/searchbar.css
+++ b/frontend/react-app/src/components/searchbar/searchbar.css
@@ -3,6 +3,7 @@
     grid-template-columns: min-content min-content;
     grid-template-areas: 'sbbutton sbbar';
     border-radius: 35em;
+    filter: drop-shadow(0 0.5rem 0.75rem #3b1e00);
 }
 
 .glass {
