--- a/frontend/react-app/src/pages/edition/objects/objects.css
+++ b/frontend/react-app/src/pages/edition/objects/objects.css
@@ -8,13 +8,17 @@
     grid-template-areas:
         ". . . ."
         ". SearchBar SearchBar . "
-        "ListMenu ListMenu . ."
-        "ListMenu ListMenu . .";
+        ". ListMenu . ."
+        ". ListMenu . .";
+        overflow: hidden;
     }
 
 #ListMenu{
-    overflow: hidden;
     grid-area: ListMenu;
+    
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
 
