--- a/frontend/react-app/src/components/selections/list/component/component.css
+++ b/frontend/react-app/src/components/selections/list/component/component.css
@@ -12,12 +12,14 @@
     ". . . . .";
     background-color: #4E2800;
     z-index: 0;
-    margin:0.25em 0 0.25em 0;
+    margin:0.25em 0.20em 0.25em 0.20em;
+    filter: drop-shadow(0 0.1rem 0.1rem #262421);
 }
 
 #ListComponent img{
     grid-area: ObjImg;
     object-fit: cover;
+    border-radius: 8px;
     height: 100%;
     width: 100%; 
     background-color: #EDDBC6;
@@ -26,7 +28,7 @@
 .objectName{
     margin: 4%;
     grid-area: ObjName;
-    font-size: 25px;
+    font-size: 15px;
     font-weight: bold;
     color:#ffffff;
     align-items: center;
