--- a/frontend/react-app/src/components/selections/list/component/component.css
+++ b/frontend/react-app/src/components/selections/list/component/component.css
@@ -1,7 +1,7 @@
 #ListComponent{
     border: 1px solid ;
     height: 6vh;
-    min-width: 40vh;
+    min-width: 38vh;
     border-radius: 5px;
     display: grid;
     grid-template-columns: 5% 20% 5% 65% 5%;
@@ -10,9 +10,14 @@
     ". . . . ."
     ". ObjImg . ObjName ."
     ". . . . .";
-    background-color: #4E2800;
+    background-color: #753D00;
     z-index: 0;
-    margin:0.25em 0.20em 0.25em 0.20em;
+    align-items: center;
+    margin:0.5em 0.8em 0.5em 0.8em;
+    filter: drop-shadow(0 0.05rem 0.05rem #262421);
+}
+
+#ListComponent:hover{
     filter: drop-shadow(0 0.1rem 0.1rem #262421);
 }
 
@@ -22,7 +27,7 @@
     border-radius: 8px;
     height: 100%;
     width: 100%; 
-    background-color: #EDDBC6;
+    
 }
 
 .objectName{
