--- a/frontend/react-app/src/components/selections/edition/objects/objects.css
+++ b/frontend/react-app/src/components/selections/edition/objects/objects.css
@@ -1,8 +1,7 @@
 #ObjectEditionScreen{
-    border-radius: 10px;
+    border-radius: 5px;
     max-height: 100%;
     max-width: 100%;
-    background-color: #EDDBC6;
+    background-color: #fff;
     filter: drop-shadow(0 0.1rem 0.2rem #787777);
-    margin:0 2vh;
 }
