--- a/frontend/react-app/src/components/selections/list/menu/list.css
+++ b/frontend/react-app/src/components/selections/list/menu/list.css
@@ -1,17 +1,23 @@
 #ListMenu{
     grid-area: List;
     overflow-y: scroll;
-    max-height: 88vh ;
+    max-height: 80vh ;
     padding:0;
     margin: 0;
 }
 
 .Menu{
-    height: 96vh;
+    scrollbar-width: none;
+    border-radius: 5px;
+    background-color: #fff;
+    filter: drop-shadow(0 0.1rem 0.2rem #787777);
+    grid-area: Menu;
+    max-width: min-content;
+    
 }
 
 .Menu #searchBarObject{
-    padding: 0 2em 0 2em;
+    padding:0 1.2em;
 }
 
 
