--- a/frontend/react-app/src/components/selections/edition/objects/objects.css
+++ b/frontend/react-app/src/components/selections/edition/objects/objects.css
@@ -2,6 +2,39 @@
     border-radius: 5px;
     max-height: 100%;
     max-width: 100%;
-    background-color: #fff;
+    background-color: #F8FAFC;
     filter: drop-shadow(0 0.1rem 0.2rem #787777);
+    display: grid;
+    grid-template-columns: 1em min-content min-content repeat(3,1fr) 1em;
+    grid-template-rows: 1em repeat(2,min-content) 1fr repeat(2, min-content) 1em;
+    grid-template-areas: ". . . . . . ."
+                        " . ObjectName SegmentedControl . . . ."
+                        ". ObjectDescription ObjectDescription ObjectDescription ObjectDescription ObjectDescription ."
+                        ". ObjectDescription ObjectDescription ObjectDescription ObjectDescription ObjectDescription ."
+                        ". ObjImg . . . ModButton ."
+                        ". ObjImg . . . DelButton ."
+                        ". . . . . . .";
+
+
+}
+
+
+.ObjectName{
+    grid-area: ObjectName;
+    white-space: nowrap;
+    font-size: 1em;
+    align-self: center;
+    justify-self: center;
+    padding:0 1em;
+    
+}
+
+.ObjImg{
+    grid-area: ObjImg;
+}
+
+.ObjectDescription{
+    text-align: justify;
+    grid-area: ObjectDescription;
+    padding: 0 1em;
 }
