--- a/frontend/react-app/src/components/selections/edition/segmented/segmented.css
+++ b/frontend/react-app/src/components/selections/edition/segmented/segmented.css
@@ -1,36 +1,27 @@
-* {
-    box-sizing: border-box;
-  }
+
   
   /* Demo only */
-  body {
-    background: #f1f1f1;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+
   
   .selected-item {
     text-align: center;
   }
   
   .controls-container {
+    grid-area: SegmentedControl;
     --highlight-width: auto;
     --highlight-x-pos: 0;
   
     display: flex;
-    margin: 100px 0 25px;
-  }
-  
-  .controls {
+}
+
+.controls {
     display: inline-flex;
     justify-content: space-between;
     background: white;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+    border-radius: 5px;
     max-width: 500px;
-    padding: 12px;
     margin: auto;
     overflow: hidden;
     position: relative;
@@ -51,7 +42,7 @@
   
   .segment {
     /* width: 100%; uncomment for each segment to have matching width */
-    min-width: 120px;
+    min-width: 4em;
     position: relative;
     text-align: center;
     z-index: 1;
@@ -61,8 +52,9 @@
     cursor: pointer;
     display: block;
     font-weight: 700;
-    padding: 10px;
+    padding: 8px;
     transition: color 0.5s ease;
+    font-size: 0.6em;
   }
   
   .segment.active label {
@@ -71,13 +63,13 @@
   
   .controls::before {
     content: "";
-    background: #5465ff;
-    border-radius: 8px;
+    background: #0063CC;
+    border-radius: 5px;
     width: var(--highlight-width);
     transform: translateX(var(--highlight-x-pos));
     position: absolute;
-    top: 8px;
-    bottom: 8px;
+    top: 0;
+    bottom: 0;
     left: 0;
     z-index: 0;
   }
