--- a/frontend/react-app/src/components/selections/list/component/component.css
+++ b/frontend/react-app/src/components/selections/list/component/component.css
@@ -1,5 +1,5 @@
 #ListComponent{
-    border: 1px solid ;
+    border: 0;
     height: 6vh;
     min-width: 38vh;
     border-radius: 5px;
@@ -10,15 +10,15 @@
     ". . . . ."
     ". ObjImg . ObjName ."
     ". . . . .";
-    background-color: #c6d3e7;
+    background-color: #fff;
     z-index: 0;
     align-items: center;
     margin:0.5em 0.6em 0.5em 0.6em;
-    filter: drop-shadow(0 0.05rem 0.05rem #262421);
+    filter: drop-shadow(0 0.02rem 0.15rem #6e6e6e);
 }
 
 #ListComponent:hover{
-    filter: drop-shadow(0 0.1rem 0.1rem #262421);
+    filter: drop-shadow(0 0.1rem 0.2rem #262421);
 }
 
 #ListComponent img{
@@ -35,7 +35,7 @@
     grid-area: ObjName;
     font-size: 15px;
     font-weight: bold;
-    color:#ffffff;
+    color:#000;
     align-items: center;
 
 }
