--- a/frontend/react-app/src/components/selections/edition/buttons/buttons.css
+++ b/frontend/react-app/src/components/selections/edition/buttons/buttons.css
@@ -22,6 +22,11 @@
     height: 2em;
 }
 
+.ModifyObject.validate{
+    grid-area: ValButton;
+    background-color: green;
+}
+
 .ModifyObject.delete{
     grid-area: DelButton;
     background-color: red;
