--- a/frontend/react-app/src/pages/edition/global/global.css
+++ b/frontend/react-app/src/pages/edition/global/global.css
@@ -1,5 +1,5 @@
 #globalEdition {
-    background-color: #F5EBDF;
+    background-color: #F1F5F9;
     min-height: 100vh;
     white-space: pre-line;
     display: grid;
