--- a/frontend/react-app/src/components/selections/edition/buttons/buttons.css
+++ b/frontend/react-app/src/components/selections/edition/buttons/buttons.css
@@ -13,6 +13,12 @@
     margin: 0.1em 0;
 }
 
+.ModifyObject.back{
+    grid-area: BackButton;
+    width: 2em;
+    height: 2em;
+    background-color: #0063CC;
+}
 
 .ModifyObject.new {
     grid-area: AddButton;
