--- a/frontend/react-app/src/components/selections/edition/buttons/buttons.css
+++ b/frontend/react-app/src/components/selections/edition/buttons/buttons.css
@@ -13,14 +13,14 @@
     margin: 0.1em 0;
 }
 
-.ModifyObject.back{
+.ModifyObject.goHome{
     grid-area: BackButton;
     width: 2em;
     height: 2em;
     background-color: #0063CC;
 }
 
-.ModifyObject.new {
+.ModifyObject.addObject {
     grid-area: AddButton;
     background-color: #0063CC;
     margin: 2.5vh 1.5vh;
