--- a/frontend/react-app/src/components/selections/list/menu/list.css
+++ b/frontend/react-app/src/components/selections/list/menu/list.css
@@ -23,11 +23,10 @@
                         "AddButton AddButton";
     scrollbar-width: none;
     border-radius: 5px;
-    background-color: #F8FAFC;
-    filter: drop-shadow(0 0.1rem 0.2rem #787777);
+    background-color: #fff;
+    filter: drop-shadow(0 0.1rem 0.1rem #787777);
     grid-area: Menu;
     max-width: min-content;
-    align-items: center;
     justify-items: center;
     
 }
