--- a/frontend/react-app/src/pages/edition/objects/objects.css
+++ b/frontend/react-app/src/pages/edition/objects/objects.css
@@ -3,8 +3,8 @@
     border-radius: 5px;
     max-height: 100%;
     max-width: 100%;
-    background-color: #F8FAFC;
-    filter: drop-shadow(0 0.1rem 0.2rem #787777);
+    background-color: #fff;
+    filter: drop-shadow(0 0.1rem 0.1rem #787777);
     display: grid;
    
 }
@@ -14,8 +14,8 @@
     min-height: 100vh;
     white-space: pre-line;
     display: grid;
-    grid-template-columns: 1% 24% 74% 1%;
-    grid-template-rows: 1% 98% 1%;
+    grid-template-columns: 2em 24% 73% 2em ;
+    grid-template-rows: 1.2em 93% 1.2em;
     grid-template-areas:
         ". . . ."
         ". Menu ObjEditionScreen . "
