--- a/frontend/react-app/src/components/selections/edition/objects/creation/creation.css
+++ b/frontend/react-app/src/components/selections/edition/objects/creation/creation.css
@@ -13,6 +13,8 @@
 }
 
 .creation > input{
+    align-items: none;
+    justify-items: none;
     margin: 0.5em;
     border: 0.5px solid grey;
     border-radius: 2px;
