--- a/frontend/react-app/src/components/selections/list/component/component.css
+++ b/frontend/react-app/src/components/selections/list/component/component.css
@@ -1,7 +1,7 @@
 #ListComponent{
     border: 0;
     height: 6vh;
-    min-width: 38vh;
+    width: 96%;
     border-radius: 5px;
     display: grid;
     grid-template-columns: 5% 20% 5% 65% 5%;
@@ -19,6 +19,10 @@
 
 #ListComponent:hover{
     filter: drop-shadow(0 0.1rem 0.2rem #262421);
+}
+
+.ListMenu{
+    width: 100%;
 }
 
 #ListComponent img{
