--- a/frontend/react-app/src/components/selections/list/menu/list.css
+++ b/frontend/react-app/src/components/selections/list/menu/list.css
@@ -26,7 +26,7 @@
     background-color: #fff;
     filter: drop-shadow(0 0.1rem 0.1rem #787777);
     grid-area: Menu;
-    max-width: min-content;
+    width: 100%;
     justify-items: center;
     
 }
