--- a/frontend/react-app/src/components/selections/edition/rooms/prompt/prompt.css
+++ b/frontend/react-app/src/components/selections/edition/rooms/prompt/prompt.css
@@ -1,6 +1,6 @@
-#roomPrompt{
-    grid-template-columns: 1em min-content min-content repeat(3,1fr) 1em;
-    grid-template-rows: 1em repeat(2,min-content) 1fr repeat(2, min-content) 1em;
+.roomPrompt{
+    grid-template-columns: 1vw min-content min-content repeat(3,1fr) 1vw;
+    grid-template-rows: 1vw repeat(2,min-content) 1fr repeat(2, min-content) 1vw;
     grid-template-areas: ". . . . . . ."
     " . RoomName RoomName . . . ."
     ". RoomImg RoomImg RoomImg RoomImg RoomImg ."
@@ -8,14 +8,22 @@
     ". . . . . ModButton ."
     ". . . . . DelButton ."
     ". . . . . . .";
+    display: grid;
 }
 
-.roomName{
+.roomPrompt > .roomName{
     grid-area: RoomName;
+    white-space: nowrap;
+    font-size: 1em;
+    align-self: center;
+    justify-self: center;
+    padding:0 1em;
+
 
 }
 
-.roomImg{
+.roomPrompt > .roomImg{
     grid-area: RoomImg;
-
+    border: 1px #6e6e6e solid;
+    border-radius: 5px;
 }
