--- a/frontend/react-app/src/components/searchbar/searchbar.scss
+++ b/frontend/react-app/src/components/searchbar/searchbar.scss
@@ -5,6 +5,7 @@
     border-radius: 35em;
     filter: drop-shadow(0 0.15rem 0.25rem #aeaeae);
     margin: 1vh 0 1vh 0;
+    grid-area: SearchBar;
 }
 
 #searchBarObject:hover{
