--- a/frontend/react-app/src/components/panels/prompt/prompt.scss
+++ b/frontend/react-app/src/components/panels/prompt/prompt.scss
@@ -1,7 +1,7 @@
 @import "../../../ressources/stylesheet/variables.scss";
 
 
-#ObjectEditionScreen{
+.ObjectPromptScreen{
     grid-template-columns: $object-prompt-columns-template;
     grid-template-rows: $object-prompt-rows-template; 
     grid-template-areas: $object-prompt-grid-area-template;
@@ -26,6 +26,8 @@
 
 .ObjImg{
     grid-area: ObjImg;
+    border: 0.5px solid grey;
+    border-radius: 5px;
 }
 
 #RoomEditionScreen{
@@ -35,7 +37,7 @@
     display: $room-prompt-display;
 }
 
-.roomImg{
+.RoomImg{
     grid-area: $room-prompt-img-grid-area;
     border: $room-prompt-img-border;
     border-radius: $room-prompt-img-border-radius;
