--- a/frontend/react-app/src/components/pages/page.scss
+++ b/frontend/react-app/src/components/pages/page.scss
@@ -94,6 +94,48 @@ a {
 }
 }
 
+#EditionScreen{
+  border-radius: 5px;
+  max-height: 100%;
+  max-width: 100%;
+  background-color: #fff;
+  filter: drop-shadow(0 0.1rem 0.1rem #787777);
+  display: grid;
+  grid-area: EditionScreen;
+ 
+}
 
+.objectLabel{
+  grid-area: ObjLabel;
+  white-space: nowrap;
+  font-size: 0.8em;
+}
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+.EditionPage{
+    background-color: #F1F5F9;
+    min-height: 100vh;
+    white-space: pre-line;
+    display: grid;
+    grid-gap: 1vh;
+    grid-template-columns:2vw  23vw 73vw 2vw ;
+    grid-template-rows: 1.5vh 96vh 1.5vh;
+    grid-template-areas:
+        ". . . ."
+        ". SideMenu EditionScreen . "
+        ". . . .";
+    justify-content: center;
+
+}
+
+#EditionScreen{
+    grid-area: EditionScreen;
+    border-radius: 5px;
+    background-color: #fff;
+    grid-gap: 5px;
+    filter: drop-shadow(0 0.1rem 0.1rem #787777);
+}
 
