--- a/frontend/react-app/src/components/pages/page.scss
+++ b/frontend/react-app/src/components/pages/page.scss
@@ -95,47 +95,29 @@ a {
 }
 
 #EditionScreen{
-  border-radius: 5px;
-  max-height: 100%;
-  max-width: 100%;
-  background-color: #fff;
-  filter: drop-shadow(0 0.1rem 0.1rem #787777);
-  display: grid;
-  grid-area: EditionScreen;
- 
-}
-
-.objectLabel{
-  grid-area: ObjLabel;
-  white-space: nowrap;
-  font-size: 0.8em;
+  border-radius:$edition-screen-border-radius;
+  max-height: $edition-screen-max-height;
+  max-width: $edition-screen-max-width;
+  background-color: $edition-screen-background-color;
+  filter: $edition-screen-filter;
+  display: $edition-screen-display;
+  grid-area: $edition-screen-grid-area;
+  grid-gap: $edition-screen-grid-gap;
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
 
-.EditionPage{
-    background-color: #F1F5F9;
-    min-height: 100vh;
-    white-space: pre-line;
-    display: grid;
-    grid-gap: 1vh;
-    grid-template-columns:2vw  23vw 73vw 2vw ;
-    grid-template-rows: 1.5vh 96vh 1.5vh;
-    grid-template-areas:
-        ". . . ."
-        ". SideMenu EditionScreen . "
-        ". . . .";
-    justify-content: center;
+.SelectionPage{
+    background-color: $selection-page-background-color;
+    min-height: $selection-page-min-height;
+    white-space: $selection-page-white-space;
+    display: $selection-page-display;
+    grid-gap: $selection-page-grid-gap;
+    grid-template-columns: $selection-page-column-template;
+    grid-template-rows: $selection-page-rows-template;
+    grid-template-areas: $selection-page-areas-template;
+    justify-content: $justify-center;
 
 }
-
-#EditionScreen{
-    grid-area: EditionScreen;
-    border-radius: 5px;
-    background-color: #fff;
-    grid-gap: 5px;
-    filter: drop-shadow(0 0.1rem 0.1rem #787777);
-}
-
